# tfg1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.gradle  task_cmake.bat  task_osx_cmake.sh  task_rm.bat  task_win32_build.bat  task_win32_cmake.bat  task_win32_cmake_polly.bat  task_win32_rm.bat  task_win64_build.bat  task_win64_cmake.bat  task_win64_cmake_polly.bat  task_win64_rm.bat
TFG/: CMakeLists.txt  Sys.h  TFG.cpp  TFG.h  TFG_fwd.h  TFG_log.cpp  TFG_log.h  djb2.h  error.cpp  error.h  stdafx.h
TFG/Bar/: Bar.cpp  Bar.h  CMakeLists.txt  MyObject.cpp  MyObject.h
TFG/Call/: CMakeLists.txt  call.cpp  call.h  call_clib.h  call_fwd.h  call_pch.cpp  call_rio.cpp  call_winapi.h
TFG/Foo/: CMakeLists.txt  Foo.cpp  Foo.h  IMyOtherObject.cpp  IMyOtherObject.h  MyObject.cpp  MyObject.h  MyOtherObject.cpp  MyOtherObject.h  stdafx.h
TFG/FooBar/: CMakeLists.txt  FooBar.cpp  FooBar.h  main.cpp
TFG/MayaPlugin/: CMakeLists.txt  devkit.cmake  mayald.cmake  mllmain.cpp  pluginEntry.cmake
TFG/NetNT/: CMakeLists.txt  Globals.cpp  Globals.h  NetNT.cpp  NetNT.h  ObjectTracker.cpp  ObjectTracker.h  OverlappedEx.h  Packet.cpp  Packet.h  Singleton.cpp  Singleton.h  TCPAcceptor.cpp  TCPAcceptor.h  TCPConnection.cpp  TCPConnection.h  TCPConnector.cpp  TCPConnector.h  ThreadSingleton.cpp  ThreadSingleton.h  UDPSocket.cpp  UDPSocket.h
TFG/NetNT/Test/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
TFG/NetNT/tests/: tests.cpp
boneyard/: CMakeLists0000002.txt  CMakeLists_00001.txt
boneyard/Call/: call.cpp  call_clib.h  call_pch.h  call_rio.cpp  call_rio.h  call_winapi.h  call_winsock.h
gradle/wrapper/: gradle-wrapper.properties
tfg/: CMakeLists.txt
tfg/include/tfg/: djb2.h  error.h  log.h  tfg.h  tfg_fwd.h
tfg/src/: error.cpp  log.cpp  tfg.cpp
tfg_bar/: CMakeLists.txt
tfg_bar/include/tfg/bar/: bar.h  myobject.h
tfg_bar/src/: bar.cpp  myobject.cpp
tfg_foo/: CMakeLists.txt
tfg_foo/include/tfg/foo/: foo.h  imyotherobject.h  myobject.h  myotherobject.h
tfg_foo/src/: foo.cpp  imyotherobject.cpp  myobject.cpp  myotherobject.cpp  stdafx.h
tfg_foobar/: CMakeLists.txt
tfg_foobar/src/: foobar.cpp  foobar.h  main.cpp
tfg_glapp/: CMakeLists.txt  build.gradle
tfg_glapp/src/: android_main.c  client.c  client.h  esshader.c  esshapes.c  estransform.c  esutil.c  esutil.h  esutil_android.c  esutil_win32.c  main.c
tfg_glapp/src/main/: AndroidManifest.xml
tfg_glapp/src/main/res/values/: strings.xml
tfg_log/: CMakeLists.txt
tfg_log/include/tfg/log/: log.h
tfg_log/src/: stdafx.h
tfg_mayaplugin/: CMakeLists.txt
tfg_mayaplugin/src/: mllmain.cpp
tfg_netnt/: CMakeLists.txt
tfg_netnt/include/tfg/netnt/: netnt.h  objecttracker.h  overlappedex.h  packet.h  singleton.h  streamtodgram.h  tcpacceptor.h  tcpconnection.h  tcpconnector.h  threadsingleton.h  udpsocket.h
tfg_netnt/src/: netnt.cpp  objecttracker.cpp  packet.cpp  singleton.cpp  stdafx.h  streamtodgram.cpp  tcpacceptor.cpp  tcpconnection.cpp  tcpconnector.cpp  threadsingleton.cpp  udpsocket.cpp
tfg_netnt/tests/: CMakeLists.txt
tfg_netnt/tests/src/: tests.cpp
